Улучшил регистрацию пользователей

--- a/TestingMocks/TestingMocks.UserApi/appsettings.Development.json
+++ b/TestingMocks/TestingMocks.UserApi/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Auth": {
+    "PasswordSalt": "F0289917673B83D441DC03EA5D1C0345",
+    "Jwt": {
+      "Expiration": "1.00:00:00",
+      "SigningKey": "981461105F28A48CD2301F39B8659337"
+    }
   }
 }
