--- a/TestingMocks/TestingMocks.Models/TestingMocks.Models.csproj
+++ b/TestingMocks/TestingMocks.Models/TestingMocks.Models.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.2" />
+  </ItemGroup>
+
 </Project>
