--- a/TestingMocks/TestingMocks.CLI/TestingMocks.CLI.csproj
+++ b/TestingMocks/TestingMocks.CLI/TestingMocks.CLI.csproj
@@ -5,15 +5,16 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Terminal.Gui" Version="1.17.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TestingMocks.Models\TestingMocks.Models.csproj" />
+    <ProjectReference Include="..\TestingMocks.Communication\TestingMocks.Communication.csproj" />
   </ItemGroup>
 
 </Project>
