--- a/TestingMocks/TestingMocks.UserApiTests/TestingMocks.UserApiTests.csproj
+++ b/TestingMocks/TestingMocks.UserApiTests/TestingMocks.UserApiTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -12,8 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TestingMocks.UserApi\TestingMocks.UserApi.csproj" />
     <ProjectReference Include="..\TestingMocks.Models\TestingMocks.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TestingMocks.UserApi\TestingMocks.UserApi.csproj" />
   </ItemGroup>
 
 </Project>
