--- a/TestingMocks/TestingMocks.CLITests/TestingMocks.CLITests.csproj
+++ b/TestingMocks/TestingMocks.CLITests/TestingMocks.CLITests.csproj
@@ -8,11 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
     <PackageReference Include="TUnit" Version="0.12.23" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TestingMocks.Models\TestingMocks.Models.csproj" />
+    <ProjectReference Include="..\TestingMocks.CLI\TestingMocks.CLI.csproj" />
   </ItemGroup>
 
 </Project>
