Добавил комментарии для проектов CLI, DTO и моделей

--- a/TestingMocks/TestingMocks.Communication/TestingMocks.Communication.csproj
+++ b/TestingMocks/TestingMocks.Communication/TestingMocks.Communication.csproj
@@ -8,6 +8,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DocumentationFile>./doc.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
