--- a/TestingMocks/TestingMocks.UserApi/TestingMocks.UserApi.csproj
+++ b/TestingMocks/TestingMocks.UserApi/TestingMocks.UserApi.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DocumentationFile>./doc.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
