Обновил GitHub Action

--- a/.github/workflows/docfx.yml
+++ b/.github/workflows/docfx.yml
@@ -35,3 +35,7 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         path: docfx/_site/
+
+    - name: Publish GitHub Pages
+      id: publish
+      uses: actions/deploy-pages@v4
