Обновил ELK - Убрал trailing slash в конфигурации nginx - Переписал ElkTest чтобы логи пушились через домен и nginx, а не по локальному адресу

--- a/ELK/ElkTest/appsettings.json
+++ b/ELK/ElkTest/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "LogstashUrl": "https://elk.1ffy.ru/logstash"
 }
