--- a/ELK/nginx/elk.conf
+++ b/ELK/nginx/elk.conf
@@ -1,8 +1,8 @@
 server {
     include /etc/nginx/common/defaults.conf;
     server_name elk.1ffy.ru;
-    
-    location /kibana/ {
+
+    location /kibana {
         proxy_pass http://192.168.1.2:5601;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -12,17 +12,13 @@ server {
         proxy_set_header X-Forwarded-Prefix /kibana;
     }
 
-    location /logstash/ {
-        proxy_pass http://192.168.1.2:50000;
+    location /logstash {
+        rewrite ^/logstash/*(.*) /$1 break;
+        proxy_pass http://192.168.1.2:50000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
-        proxy_set_header X-Forwarded-Prefix /logstash;
-    }
-
-    location = / {
-        rewrite ^/$ /kibana/ permanent;
     }
 }
