--- a/ELK/docker-elk/.env
+++ b/ELK/docker-elk/.env
@@ -7,26 +7,26 @@ ELASTIC_VERSION=8.17.4
 #
 # Superuser role, full access to cluster management and data indices.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-ELASTIC_PASSWORD='Sn=AJA42Ocw_1Guv8KVo'
+ELASTIC_PASSWORD='9G6q6di_0iSoeaVpxnrN'
 
 # User 'logstash_internal' (custom)
 #
 # The user Logstash uses to connect and send data to Elasticsearch.
 # https://www.elastic.co/guide/en/logstash/current/ls-security.html
-LOGSTASH_INTERNAL_PASSWORD='MLNRixaftB8j821scQHi'
+LOGSTASH_INTERNAL_PASSWORD='otg=*QlskGfip0T3Iv68'
 
 # User 'kibana_system' (built-in)
 #
 # The user Kibana uses to connect and communicate with Elasticsearch.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-KIBANA_SYSTEM_PASSWORD='-NuDPom1dsg=_d+P9cjB'
+KIBANA_SYSTEM_PASSWORD='JI-rR-SBirJU0dBRc2gm'
 
 # Users 'metricbeat_internal', 'filebeat_internal' and 'heartbeat_internal' (custom)
 #
 # The users Beats use to connect and send data to Elasticsearch.
 # https://www.elastic.co/guide/en/beats/metricbeat/current/feature-roles.html
 METRICBEAT_INTERNAL_PASSWORD=''
-FILEBEAT_INTERNAL_PASSWORD=''
+FILEBEAT_INTERNAL_PASSWORD='123123'
 HEARTBEAT_INTERNAL_PASSWORD=''
 
 # User 'monitoring_internal' (custom)
@@ -39,4 +39,4 @@ MONITORING_INTERNAL_PASSWORD=''
 #
 # The user the Beats use when storing monitoring information in Elasticsearch.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-BEATS_SYSTEM_PASSWORD=''
+BEATS_SYSTEM_PASSWORD='DrdDhgTg8Vw26mhvCrED'
