--- a/ELK/docker-elk/logstash/pipeline/logstash.conf
+++ b/ELK/docker-elk/logstash/pipeline/logstash.conf
@@ -14,7 +14,7 @@ input {
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-		user => "logstash_internal"
+		user => "logstash_system"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
 	}
 }
